[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/images/lava1.png" type="Texture" id=1]
[ext_resource path="res://Assets/images/stage4.png" type="Texture" id=2]
[ext_resource path="res://Assets/images/lava2.png" type="Texture" id=3]
[ext_resource path="res://player2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Narkabhira.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/stage4bossb.gd" type="Script" id=6]
[ext_resource path="res://shootingthing.tscn" type="PackedScene" id=7]
[ext_resource path="res://shootingthing2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Sounds/finaleexplosion.ogg" type="AudioStream" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 437.111, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 223.51 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 430.807, 10 )

[sub_resource type="Animation" id=5]
resource_name = "ending"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("flash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("black:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.27, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 70.9529, 124.541 )

[node name="boss4" type="Node2D"]
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 447.171, 382.637 )
scale = Vector2( 1, 1.04009 )
frames = SubResource( 1 )
playing = true

[node name="bg" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player2" parent="." instance=ExtResource( 4 )]
position = Vector2( 302.642, 637.81 )
scale = Vector2( 0.75, 0.75 )

[node name="Spawner" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="Spawner"]
one_shot = true

[node name="wall" type="StaticBody2D" parent="."]
position = Vector2( 316.784, 470.933 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall"]
shape = SubResource( 2 )

[node name="wall2" type="StaticBody2D" parent="."]
position = Vector2( 369.11, 816.001 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall2"]
shape = SubResource( 2 )

[node name="wall3" type="StaticBody2D" parent="."]
position = Vector2( -35.3553, 640.639 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall3"]
shape = SubResource( 3 )

[node name="wall4" type="StaticBody2D" parent="."]
position = Vector2( 753.776, 667.509 )
rotation = -0.456912
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall4"]
shape = SubResource( 3 )

[node name="shootingthing" parent="." instance=ExtResource( 7 )]
position = Vector2( 83.4386, 120.208 )

[node name="shootingthing2" parent="." instance=ExtResource( 8 )]
position = Vector2( 673.166, 140.007 )

[node name="shootingthing3" parent="." instance=ExtResource( 8 )]
position = Vector2( 200.818, 346.482 )

[node name="Narkabhira" parent="." instance=ExtResource( 5 )]
position = Vector2( 418.908, 337.612 )

[node name="enemyshieldlol" type="KinematicBody2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="enemyshieldlol"]
visible = false
margin_left = -11.0
margin_top = 426.514
margin_right = 814.0
margin_bottom = 439.514
color = Color( 0.407843, 0.403922, 0.403922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyshieldlol"]
position = Vector2( 379.357, 430.493 )
shape = SubResource( 4 )
disabled = true

[node name="shieldcooldown" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="cd2" type="Timer" parent="."]
wait_time = 3.0

[node name="explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="flash" type="ColorRect" parent="."]
visible = false
margin_right = 829.0
margin_bottom = 829.0
color = Color( 0.952941, 0.286275, 0.054902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ending" type="AnimationPlayer" parent="."]
anims/ending = SubResource( 5 )

[node name="black" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -1.0
margin_right = 836.0
margin_bottom = 849.0
color = Color( 0, 0, 0, 1 )

[node name="orangeting" type="Area2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="orangeting"]
visible = false
margin_left = 10.0
margin_top = 506.0
margin_right = 189.0
margin_bottom = 764.0
color = Color( 0.968627, 0.466667, 0.0235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="orangeting"]
position = Vector2( 98.9949, 644.881 )
shape = SubResource( 6 )
disabled = true

[node name="orangetime" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="orangetime2" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="Spawner/SpawnTimer" to="Spawner" method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="shieldcooldown" to="." method="_on_shieldcooldown_timeout"]
[connection signal="timeout" from="cd2" to="." method="_on_cd2_timeout"]
[connection signal="animation_finished" from="ending" to="." method="_on_ending_animation_finished"]
[connection signal="timeout" from="orangetime" to="." method="_on_orangetime_timeout"]
[connection signal="timeout" from="orangetime2" to="." method="_on_orangetime2_timeout"]
